--- a/index.html
+++ b/index.html
@@ -17,9 +17,52 @@
 
 
 <div class="w3-center w3-padding-32">
-    <div class="w3-card w3-container">
-        <p>...Coming Soon...</p>
+    <h2>Introduction</h2>
+    <div class="w3-card w3-container w3-justify w3-padded-box">
+        <p>
+            Unit test code, just like regular/production source code, is subject to bad programming practices, known
+            also as
+            anti-patterns, defects and smells <span class="w3-cite">[1]</span>. Smells, being symptoms of bad design or
+            implementation decisions, has
+            been proven to be responsible for decreasing the quality of software systems from various aspects, such as
+            making it harder to understand, more complex to maintain, and more prone to errors and bugs <span
+                class="w3-cite">[2]</span>.
+        </p>
+        <p>
+            Test smells are defined as bad programming practices in unit test code (such as how test cases are
+            organized, implemented and interact with each other) that indicate potential design problems in the test
+            source code <span class="w3-cite">[3], [4], [5], [6]</span>.
+        </p>
+        <p>
+            The objective of this project is to educate developers on the types of unit testing smells that developers
+            typically introduce or encounter when writing unit tests. To this extent, this site provides definitions
+            (along with examples) of unit test smells and an open-source tool to detect the different smell types in the
+            source code.
+        </p>
     </div>
+
+    <div class="w3-card w3-padded-box w3-margin-top">
+        <div class="w3-container w3-half w3-margin-top w3-margin-bottom">
+            <a href='download.html' style="text-decoration: none;">
+                <div class="w3-card w3-container">
+                    <h3>Test Smell Types</h3><br>
+                    <i class="fa fa-bug w3-margin-bottom w3-text-theme" style="font-size:100px"></i>
+                </div>
+            </a>
+        </div>
+
+        <div class="w3-container w3-half w3-margin-top w3-margin-bottom">
+            <a href='pages/tsDetect.html' style="text-decoration: none;">
+                <div class="w3-card w3-container">
+                    <h3>Test Smell Detector</h3><br>
+                    <i class="fa fa-cogs w3-margin-bottom w3-text-theme" style="font-size:100px"></i>
+                </div>
+            </a>
+        </div>
+
+
+    </div>
+</div>
 </div>
 
 
