--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <!-- Header -->
 <header class="w3-container w3-theme w3-padding" id="myHeader">
-    <div class="w3-center">
+        <div class="w3-center">
         <h1 class="w3-xxxlarge w3-animate-bottom">Software Unit Test Smells</h1>
     </div>
 </header>
@@ -43,7 +43,7 @@
 
     <div class="w3-card w3-padded-box w3-margin-top">
         <div class="w3-container w3-half w3-margin-top w3-margin-bottom">
-            <a href='download.html' style="text-decoration: none;">
+            <a href='pages/testsmells.html' style="text-decoration: none;">
                 <div class="w3-card w3-container">
                     <h3>Test Smell Types</h3><br>
                     <i class="fa fa-bug w3-margin-bottom w3-text-theme" style="font-size:100px"></i>
@@ -59,11 +59,14 @@
                 </div>
             </a>
         </div>
-
-
     </div>
 </div>
-</div>
+<footer class="w3-container w3-teal w3-footer w3-animate-zoom">
+    <p class="w3-small">
+        Made with <i class="fa fa-heart fa-stack w3-animate-fading2"></i> at <a href="http://www.se.rit.edu/" style="text-decoration: none;" target="_blank">RIT</a>
+    </p>
+</footer>
+
 
 
 </body>
