--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <a href='pages/testsmells.html' style="text-decoration: none;">
                 <div class="w3-card w3-container">
                     <h3>Test Smell Types</h3><br>
-                    <i class="fa fa-bug w3-margin-bottom w3-text-theme" style="font-size:100px"></i>
+                    <i class="fa fa-bug w3-margin-bottom w3-text-theme  w3-fa-spin" style="font-size:100px"></i>
                 </div>
             </a>
         </div>
@@ -55,7 +55,7 @@
             <a href='pages/tsDetect.html' style="text-decoration: none;">
                 <div class="w3-card w3-container">
                     <h3>Test Smell Detector</h3><br>
-                    <i class="fa fa-cogs w3-margin-bottom w3-text-theme" style="font-size:100px"></i>
+                    <i class="fa fa-cogs w3-margin-bottom w3-text-theme w3-fa-spin" style="font-size:100px"></i>
                 </div>
             </a>
         </div>
@@ -63,7 +63,7 @@
 </div>
 <footer class="w3-container w3-teal w3-footer w3-animate-zoom">
     <p class="w3-small">
-        Made with <i class="fa fa-heart fa-stack w3-animate-fading2"></i> at <a href="http://www.se.rit.edu/" style="text-decoration: none;" target="_blank">RIT</a>
+        Made with <i class="fa fa-heart fa-stack w3-animate-fading2  w3-fa-spin"></i> at <a href="http://www.se.rit.edu/" style="text-decoration: none;" target="_blank">RIT</a>
     </p>
 </footer>
 
