--- a/pages/tsDetect.html
+++ b/pages/tsDetect.html
@@ -18,7 +18,7 @@
 
 <footer class="w3-container w3-teal w3-footer w3-animate-opacity">
     <p class="w3-small">
-        Made with <i class="fa fa-heart fa-stack w3-animate-fading2 w3-fa-spin" ></i> at <a href="http://www.se.rit.edu/" style="text-decoration: none;" target="_blank">RIT</a>
+        Made with <i class="fa fa-heart w3-animate-fading2  w3-fa-spin"></i> at <a href="http://www.se.rit.edu/" style="text-decoration: none;" target="_blank">RIT</a>
     </p>
 </footer>
 </body>
