--- a/pages/testsmells.html
+++ b/pages/testsmells.html
@@ -20,7 +20,7 @@
 <div class="w3-center w3-padding-32">
     <div class="w3-card w3-container w3-justify w3-padded-box">
         <p>
-            Provided below are the test smell detected by the tool along with the detection strategy.
+            Provided below are the test smells detected by tsDetect along with the detection strategy.
         </p>
         <ul id="SmellList">
             <li>
