--- a/pages/testsmells.html
+++ b/pages/testsmells.html
@@ -8,10 +8,17 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
 <body>
 
+<ul class="topnav w3-small">
+    <li><a href="../index.html">Home</a></li>
+    <li><a class="active" href="testsmells.html">Test Smell Types</a></li>
+    <li><a href="tsDetect.html">Test Smell Detector</a></li>
+    <li class="right"><a href="#">About</a></li>
+</ul>
+
 <!-- Header -->
 <header class="w3-container w3-theme w3-padding" id="myHeader">
     <div class="w3-center">
-        <a href='../index.html' class='w3-bar-item w3-button w3-hover-theme'><h4>Software Unit Test Smells</h4></a>
+        <!--<a href='../index.html' class='w3-bar-item w3-button w3-hover-theme'><h4>Software Unit Test Smells</h4></a>-->
         <h1 class="w3-xxxlarge w3-animate-bottom">Test Smell Types</h1>
     </div>
 </header>
