added about page

--- a/pages/about.html
+++ b/pages/about.html
@@ -11,15 +11,15 @@
 <ul class="topnav w3-small">
     <li><a href="../index.html">Home</a></li>
     <li><a href="testsmells.html">Test Smell Types</a></li>
-    <li><a class="active" href="tsDetect.html">Test Smell Detector</a></li>
-    <li class="right"><a href="about.html">About</a></li>
+    <li><a href="tsDetect.html">Test Smell Detector</a></li>
+    <li class="right"><a class="active" href="#">About</a></li>
 </ul>
 
 <!-- Header -->
 <header class="w3-container w3-theme w3-padding" id="myHeader">
     <div class="w3-center">
         <!--<a href='../index.html' class='w3-bar-item w3-button w3-hover-theme'><h4>Software Unit Test Smells</h4></a>-->
-        <h1 class="w3-xxxlarge w3-animate-bottom">Test Smell Detector</h1>
+        <h1 class="w3-xxxlarge w3-animate-bottom">About</h1>
     </div>
 </header>
 
