--- a/pages/testsmells.html
+++ b/pages/testsmells.html
@@ -12,7 +12,7 @@
     <li><a href="../index.html">Home</a></li>
     <li><a class="active" href="testsmells.html">Test Smell Types</a></li>
     <li><a href="tsDetect.html">Test Smell Detector</a></li>
-    <li class="right"><a href="#">About</a></li>
+    <li class="right"><a href="about.html">About</a></li>
 </ul>
 
 <!-- Header -->
