--- a/pages/about.html
+++ b/pages/about.html
@@ -23,9 +23,34 @@
     </div>
 </header>
 
+<div class="w3-center w3-padding-32">
+    <div class="w3-card w3-container w3-justify w3-padded-box">
+        <p>
+            This research on unit test smells, along with the implementation of the test smell detection tool was
+            performed by the faculty and students of the <a href="http://www.se.rit.edu/" target="_blank">Department of
+            Software
+            Engineering</a> of <a href="http://www.rit.edu/" target="_blank">Rochester Institute of
+            Technology</a>, New York.
+        </p>
+        <p>
+            We invite fellow researchers and software engineers to provide us with feedback and extensions on our
+            research and tool. Please feel free to reach out to any of the following individuals with your feedback or
+            questions:
+        <ul>
+            <li><a href="https://github.com/shehan" target="_blank">Anthony Peruma</a></li>
+            <li><a href="https://github.com/mkaouer" target="_blank">Mohamed Wiem Mkaouer</a></li>
+            <li><a href="https://github.com/khalidsalmalki" target="_blank">Khalid Almalki</a></li>
+        </ul>
+        </p>
+    </div>
+</div>
+
+
 <footer class="w3-container w3-teal w3-footer w3-animate-opacity">
     <p class="w3-small">
-        Made with <i class="fa fa-heart w3-animate-fading2  w3-fa-spin"></i> at <a href="http://www.se.rit.edu/" style="text-decoration: none;" target="_blank">RIT</a>
+        Made with <i class="fa fa-heart w3-animate-fading2  w3-fa-spin"></i> at <a href="http://www.se.rit.edu/"
+                                                                                   style="text-decoration: none;"
+                                                                                   target="_blank">RIT</a>
     </p>
 </footer>
 </body>
