linked to about page

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
             (along with examples) of unit test smells and an open-source tool to detect the different smell types in the
             source code.
         </p>
+        <p>
+            For questions, clarifications, or further information you can reach us <a href="pages/about.html">here</a>.
+        </p>
     </div>
 
     <div class="w3-card w3-padded-box w3-margin-top">
