--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <!-- Header -->
 <header class="w3-container w3-theme w3-padding" id="myHeader">
-        <div class="w3-center">
+    <div class="w3-center">
         <h1 class="w3-xxxlarge w3-animate-bottom">Software Unit Test Smells</h1>
     </div>
 </header>
@@ -22,16 +22,20 @@
         <p>
             Unit test code, just like regular/production source code, is subject to bad programming practices, known
             also as
-            anti-patterns, defects and smells <span class="w3-cite">[1]</span>. Smells, being symptoms of bad design or
+            anti-patterns, defects and smells <a href='#'
+                                                 onclick="document.getElementById('id01').style.display='block'"><span
+                class="w3-cite">[1]</span></a>. Smells, being symptoms of bad design or
             implementation decisions, has
             been proven to be responsible for decreasing the quality of software systems from various aspects, such as
-            making it harder to understand, more complex to maintain, and more prone to errors and bugs <span
-                class="w3-cite">[2]</span>.
+            making it harder to understand, more complex to maintain, and more prone to errors and bugs <a href='#'
+                                                                                                           onclick="document.getElementById('id01').style.display='block'"><span
+                class="w3-cite">[2]</span></a>.
         </p>
         <p>
             Test smells are defined as bad programming practices in unit test code (such as how test cases are
             organized, implemented and interact with each other) that indicate potential design problems in the test
-            source code <span class="w3-cite">[3], [4], [5], [6]</span>.
+            source code <a href='#' onclick="document.getElementById('id01').style.display='block'"><span
+                class="w3-cite">[3], [4], [5], [6]</span></a>.
         </p>
         <p>
             The objective of this project is to educate developers on the types of unit testing smells that developers
@@ -66,11 +70,30 @@
 </div>
 <footer class="w3-container w3-teal w3-footer w3-animate-zoom">
     <p class="w3-small">
-        Made with <i class="fa fa-heart fa-stack w3-animate-fading2  w3-fa-spin"></i> at <a href="http://www.se.rit.edu/" style="text-decoration: none;" target="_blank">RIT</a>
+        Made with <i class="fa fa-heart fa-stack w3-animate-fading2  w3-fa-spin"></i> at <a
+            href="http://www.se.rit.edu/" style="text-decoration: none;" target="_blank">RIT</a>
     </p>
 </footer>
 
 
+<!-- Modal -->
+<div id="id01" class="w3-modal">
+    <div class="w3-modal-content w3-card-4 w3-animate-top">
+        <header class="w3-container w3-theme-l1">
+        <span onclick="document.getElementById('id01').style.display='none'"
+              class="w3-button w3-display-topright w3-large">X</span>
+            <h4>References</h4>
+        </header>
+        <div class="w3-padding">
+            <p>[1] Fowler, M., & Beck, K. (1999). Refactoring: improving the design of existing code. Addison-Wesley Professional.</p>
+            <p>[2] Mäntylä, M. V., & Lassenius, C. (2006). Subjective evaluation of software evolvability using code smells: An empirical study. Empirical Software Engineering, 11(3), 395-431.</p>
+            <p>[3] Van Deursen, A., Moonen, L., van den Bergh, A., & Kok, G. (2001, May). Refactoring test code. In Proceedings of the 2nd international conference on extreme programming and flexible processes in software engineering (XP2001) (pp. 92-95).</p>
+            <p>[4] Greiler, M., Zaidman, A., Deursen, A. V., & Storey, M. A. (2013, May). Strategies for avoiding text fixture smells during software evolution. In Proceedings of the 10th Working Conference on Mining Software Repositories (pp. 387-396). IEEE Press.</p>
+            <p>[5] Palomba, F., Di Nucci, D., Panichella, A., Oliveto, R., & De Lucia, A. (2016, May). On the diffusion of test smells in automatically generated test code: An empirical study. In Proceedings of the 9th International Workshop on Search-Based Software Testing (pp. 5-14). ACM.</p>
+            <p>[6] Meszaros, G. (2007). xUnit test patterns: Refactoring test code. Pearson Education.</p>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
