--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
 
         <div class="w3-container w3-half w3-margin-top w3-margin-bottom">
-            <a href='pages/tsDetect.html' style="text-decoration: none;">
+            <a href='pages/testsmelldetector.html' style="text-decoration: none;">
                 <div class="w3-card w3-container">
                     <h3>Test Smell Detector</h3><br>
                     <i class="fa fa-cogs w3-margin-bottom w3-text-theme w3-fa-spin" style="font-size:100px"></i>
