--- a/pages/about.html
+++ b/pages/about.html
@@ -11,8 +11,9 @@
 <ul class="topnav w3-small">
     <li><a href="../index.html">Home</a></li>
     <li><a href="testsmells.html">Test Smell Types</a></li>
+    <li><a href="testsmellexamples.html">Test Smell Examples</a></li>
     <li><a href="testsmelldetector.html">Test Smell Detector</a></li>
-    <li class="right"><a class="active" href="#">About</a></li>
+    <li class="right"><a class="active" href="about.html">About</a></li>
 </ul>
 
 <!-- Header -->
