--- a/pages/testsmellexamples.html
+++ b/pages/testsmellexamples.html
@@ -11,8 +11,8 @@
 <ul class="topnav w3-small">
     <li><a href="../index.html">Home</a></li>
     <li><a href="testsmells.html">Test Smell Types</a></li>
-    <li><a href="testsmellexamples.html">Test Smell Examples</a></li>
-    <li><a class="active" href="testsmelldetector.html">Test Smell Detector</a></li>
+    <li><a  class="active" href="testsmellexamples.html">Test Smell Examples</a></li>
+    <li><a href="testsmelldetector.html">Test Smell Detector</a></li>
     <li class="right"><a href="about.html">About</a></li>
 </ul>
 
@@ -20,13 +20,24 @@
 <header class="w3-container w3-theme w3-padding" id="myHeader">
     <div class="w3-center">
         <!--<a href='../index.html' class='w3-bar-item w3-button w3-hover-theme'><h4>Software Unit Test Smells</h4></a>-->
-        <h1 class="w3-xxxlarge w3-animate-bottom">Test Smell Detector</h1>
+        <h1 class="w3-xxxlarge w3-animate-bottom">Test Smell Examples</h1>
     </div>
 </header>
 
+<div class="w3-center w3-padding-32">
+    <div class="w3-card w3-container w3-justify w3-padded-box">
+        <p>
+            xxxxxxx
+        </p>
+    </div>
+</div>
+
+
 <footer class="w3-container w3-teal w3-footer w3-animate-opacity">
     <p class="w3-small">
-        Made with <i class="fa fa-heart w3-animate-fading2  w3-fa-spin"></i> at <a href="http://www.se.rit.edu/" style="text-decoration: none;" target="_blank">RIT</a>
+        Made with <i class="fa fa-heart w3-animate-fading2  w3-fa-spin"></i> at <a href="http://www.se.rit.edu/"
+                                                                                   style="text-decoration: none;"
+                                                                                   target="_blank">RIT</a>
     </p>
 </footer>
 </body>
