--- a/pages/testsmells.html
+++ b/pages/testsmells.html
@@ -11,6 +11,7 @@
 <ul class="topnav w3-small">
     <li><a href="../index.html">Home</a></li>
     <li><a class="active" href="testsmells.html">Test Smell Types</a></li>
+    <li><a href="testsmellexamples.html">Test Smell Examples</a></li>
     <li><a href="testsmelldetector.html">Test Smell Detector</a></li>
     <li class="right"><a href="about.html">About</a></li>
 </ul>
@@ -27,7 +28,7 @@
 <div class="w3-center w3-padding-32">
     <div class="w3-card w3-container w3-justify w3-padded-box">
         <p>
-            Provided below are the test smells detected by tsDetect along with the detection strategy.
+            Provided below are the test smells detected by our tool along with the detection strategy.
         </p>
         <ul id="SmellList">
             <li>
