--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
 
     <div class="w3-card w3-padded-box w3-margin-top">
-        <div class="w3-container w3-half w3-margin-top w3-margin-bottom">
+        <div class="w3-container w3-third w3-margin-top w3-margin-bottom">
             <a href='pages/testsmells.html' style="text-decoration: none;">
                 <div class="w3-card w3-container">
                     <h3>Test Smell Types</h3><br>
@@ -58,7 +58,16 @@
             </a>
         </div>
 
-        <div class="w3-container w3-half w3-margin-top w3-margin-bottom">
+        <div class="w3-container w3-third w3-margin-top w3-margin-bottom">
+            <a href='pages/testsmellexamples.html' style="text-decoration: none;">
+                <div class="w3-card w3-container">
+                    <h3>Test Smell Examples</h3><br>
+                    <i class="fa fa-code w3-margin-bottom w3-text-theme w3-fa-spin" style="font-size:100px"></i>
+                </div>
+            </a>
+        </div>
+
+        <div class="w3-container w3-third w3-margin-top w3-margin-bottom">
             <a href='pages/testsmelldetector.html' style="text-decoration: none;">
                 <div class="w3-card w3-container">
                     <h3>Test Smell Detector</h3><br>
