--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html>
-<title>Software Unit Test Smells</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="assets/w3.css">
-<link rel="stylesheet" href="assets/w3-theme-teal.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
+<head>
+    <title>Software Unit Test Smells</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="assets/w3.css">
+    <link rel="stylesheet" href="assets/w3-theme-teal.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117089382-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
+        gtag('js', new Date());
+
+        gtag('config', 'UA-117089382-1');
+    </script>
+
+</head>
 <body>
 
 <!-- Header -->
@@ -94,11 +111,19 @@
             <h4>References</h4>
         </header>
         <div class="w3-padding">
-            <p>[1] Fowler, M., & Beck, K. (1999). Refactoring: improving the design of existing code. Addison-Wesley Professional.</p>
-            <p>[2] Mäntylä, M. V., & Lassenius, C. (2006). Subjective evaluation of software evolvability using code smells: An empirical study. Empirical Software Engineering, 11(3), 395-431.</p>
-            <p>[3] Van Deursen, A., Moonen, L., van den Bergh, A., & Kok, G. (2001, May). Refactoring test code. In Proceedings of the 2nd international conference on extreme programming and flexible processes in software engineering (XP2001) (pp. 92-95).</p>
-            <p>[4] Greiler, M., Zaidman, A., Deursen, A. V., & Storey, M. A. (2013, May). Strategies for avoiding text fixture smells during software evolution. In Proceedings of the 10th Working Conference on Mining Software Repositories (pp. 387-396). IEEE Press.</p>
-            <p>[5] Palomba, F., Di Nucci, D., Panichella, A., Oliveto, R., & De Lucia, A. (2016, May). On the diffusion of test smells in automatically generated test code: An empirical study. In Proceedings of the 9th International Workshop on Search-Based Software Testing (pp. 5-14). ACM.</p>
+            <p>[1] Fowler, M., & Beck, K. (1999). Refactoring: improving the design of existing code. Addison-Wesley
+                Professional.</p>
+            <p>[2] Mäntylä, M. V., & Lassenius, C. (2006). Subjective evaluation of software evolvability using code
+                smells: An empirical study. Empirical Software Engineering, 11(3), 395-431.</p>
+            <p>[3] Van Deursen, A., Moonen, L., van den Bergh, A., & Kok, G. (2001, May). Refactoring test code. In
+                Proceedings of the 2nd international conference on extreme programming and flexible processes in
+                software engineering (XP2001) (pp. 92-95).</p>
+            <p>[4] Greiler, M., Zaidman, A., Deursen, A. V., & Storey, M. A. (2013, May). Strategies for avoiding text
+                fixture smells during software evolution. In Proceedings of the 10th Working Conference on Mining
+                Software Repositories (pp. 387-396). IEEE Press.</p>
+            <p>[5] Palomba, F., Di Nucci, D., Panichella, A., Oliveto, R., & De Lucia, A. (2016, May). On the diffusion
+                of test smells in automatically generated test code: An empirical study. In Proceedings of the 9th
+                International Workshop on Search-Based Software Testing (pp. 5-14). ACM.</p>
             <p>[6] Meszaros, G. (2007). xUnit test patterns: Refactoring test code. Pearson Education.</p>
         </div>
     </div>
