--- a/pages/testsmelldetector.html
+++ b/pages/testsmelldetector.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html>
-<title>Software Unit Test Smells</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="../assets/w3.css">
-<link rel="stylesheet" href="../assets/w3-theme-teal.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
+<head>
+    <title>Software Unit Test Smells</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="../assets/w3.css">
+    <link rel="stylesheet" href="../assets/w3-theme-teal.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117089382-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
+        gtag('js', new Date());
+
+        gtag('config', 'UA-117089382-1');
+    </script>
+
+</head>
 <body>
 
 <ul class="topnav w3-small">
@@ -26,7 +43,9 @@
 
 <footer class="w3-container w3-teal w3-footer w3-animate-opacity">
     <p class="w3-small">
-        Made with <i class="fa fa-heart w3-animate-fading2  w3-fa-spin"></i> at <a href="http://www.se.rit.edu/" style="text-decoration: none;" target="_blank">RIT</a>
+        Made with <i class="fa fa-heart w3-animate-fading2  w3-fa-spin"></i> at <a href="http://www.se.rit.edu/"
+                                                                                   style="text-decoration: none;"
+                                                                                   target="_blank">RIT</a>
     </p>
 </footer>
 </body>
