started adding examples

--- a/pages/testsmellexamples.html
+++ b/pages/testsmellexamples.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="../assets/w3.css">
     <link rel="stylesheet" href="../assets/w3-theme-teal.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet"
+          href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.4.0/languages/java.min.js"></script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117089382-1"></script>
@@ -21,6 +25,8 @@
 
         gtag('config', 'UA-117089382-1');
     </script>
+
+    <script>hljs.initHighlightingOnLoad();</script>
 
 </head>
 <body>
@@ -105,6 +111,50 @@
                 <a href="#UnknownTest">Unknown Test</a>
             </li>
         </ul>
+        <div class="w3-container" id="AssertionRoulette">
+            <h5>Assertion Roulette</h5>
+            <pre><code class="java">
+@MediumTest
+public void testCloneNonBareRepoFromLocalTestServer() throws Exception {
+    Clone cloneOp = new Clone(false, integrationGitServerURIFor("small-repo.early.git"), helper().newFolder());
+
+    Repository repo = executeAndWaitFor(cloneOp);
+
+    assertThat(repo, hasGitObject("ba1f63e4430bff267d112b1e8afc1d6294db0ccc"));
+
+    File readmeFile = new File(repo.getWorkTree(), "README");
+    assertThat(readmeFile, exists());
+    assertThat(readmeFile, ofLength(12));
+}
+                </code></pre>
+            <p>
+                Rationale: The assertThat() method is called 3 times within the test method. Each assert statement
+                checks for a different condition, but the developer does not provide a explanation message for each
+                assert statement. Hence, if one of the assert statements were to fail, identifying the cause of the
+                failure is not straightforward.
+            </p>
+            <p>
+                <span class=" w3-small w3-left-align">Original File(s):<a
+                        href="https://github.com/rtyley/agit/blob/fc99d8eaa42940198589b032a2b9ba74d9ce3094/agit-integration-tests/src/main/java/com/madgag/agit/GitAsyncTaskTest.java"
+                        target="_blank">GitAsyncTaskTest.java</a></span>
+                <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
+            </p>
+        </div>
+        <div class="w3-container" id="ConditionalTestLogic">
+            <h5>Conditional Test Logic</h5>
+            <pre><code class="java">
+
+            </code></pre>
+            <p>
+                Rationale: xx
+            </p>
+            <p>
+                <span class=" w3-small w3-left-align">Original File(s):<a
+                        href=""
+                        target="_blank">xx</a></span>
+                <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
+            </p>
+        </div>
     </div>
 </div>
 
